--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,18 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+.floating { 
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 15px); }
+  100%   { transform: translate(0, -0px); }   
+}
 
 @layer base {
   * {
